--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -7,7 +7,7 @@ hero:
   image:
     file: ../../assets/houston.webp
   actions:
-    - text: Example Guide
+    - text:  Guide
       link: /guides/example/
       icon: right-arrow
     - text: Read the Starlight docs
