fix(navigation): 修正文件導航路徑從 guides 到 guide

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -8,10 +8,10 @@ hero:
     file: ../../assets/wed_sat_icon.svg
   actions:
     - text: 開始探索
-      link: /guides/welcome/
+      link: /guide/welcome/
       icon: right-arrow
     - text: 關於本站
-      link: /guides/welcome/
+      link: /guide/welcome/
       icon: information
       variant: minimal
 ---
